# cmake_cpp_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build_linux.sh  vcpkg.json
src/: main.cpp
